# fastapi-filter-sqlalchemy-lite

./: README.md  pyproject.toml  setup.py
fastapi-sqlalchmey-filter-lite/: base_filter.py  filter.py
fastapi_sqlalchemy_filter/: __init__.py
