[tool.poetry]
name = "fastapi_sqlalchemy_filter"
version = "0.1.0"
description = "A lite version of fastapi-filter for SQLAlchemy only"
authors = ["Arthur Rio <arthur.rio44@gmail.com>", "Warui <warui@marketforce360.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/waruingugi/fastapi-filter-sqlalchemy-lite"
packages = [{include = "fastapi_sqlalchemy_filter"}]
classifiers = [
    "Natural Language :: English",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.78,<0.93"
sqlalchemy = {version = ">=1.4.36,<2.1.0", optional = true}
pydantic = ">=1.10.0,<2.0.0"


[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "fastapi-sqlalchemy-filter"
version = "0.0.1"


[project.urls]
"Homepage" = "https://github.com/waruingugi/fastapi-filter-sqlalchemy-lite"
"Bug Tracker" = "https://github.com/waruingugi/fastapi-filter-sqlalchemy-lite/issues"
