[tool.poetry]
name = "fastapi_sqlalchemy_filter"
version = "0.2.4"
description = "A lite version of fastapi-filter for SQLAlchemy only"
authors = ["Warui <warui@marketforce360.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/waruingugi/fastapi-filter-sqlalchemy-lite"
packages = [{include = "fastapi_sqlalchemy_filter"}]
classifiers = [
    "Natural Language :: English",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.78,<0.93"
sqlalchemy = ">=1.4.36,<2.1.0"
pydantic = ">=1.10.0,<2.0.0"


[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'
